[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Scene/fire_on_log.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemy/enemy_back_up.png" type="Texture" id=2]
[ext_resource path="res://scenes/end_game.gd" type="Script" id=3]
[ext_resource path="res://assets/Enemy/enemy.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemy/enemy_back_up_2.png" type="Texture" id=5]
[ext_resource path="res://assets/Enemy/enemy_2.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Anime_up:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 125, 335 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anime_up2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 372, 336 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimeWalk:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 125, 463 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimeWalk2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 386, 161 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "danse2"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anime_up2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 372, 336 ), Vector2( 372, 254 ), Vector2( 372, 336 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anime_up:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 125, 335 ), Vector2( 125, 254 ), Vector2( 125, 335 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimeWalk:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 125, 463 ), Vector2( 374, 463 ), Vector2( 125, 463 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimeWalk2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 386, 161 ), Vector2( 127, 160 ) ]
}

[node name="EndGame" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.509804, 0.32549, 0.0313726, 1 )

[node name="FireOnLog" type="Sprite" parent="."]
position = Vector2( 243, 355 )
scale = Vector2( 2.6, 2.445 )
texture = ExtResource( 1 )

[node name="Anime_up" type="AnimatedSprite" parent="."]
position = Vector2( 125, 335 )
scale = Vector2( 0.64, 0.645 )
frames = SubResource( 1 )
animation = "up"

[node name="Anime_up2" type="AnimatedSprite" parent="."]
position = Vector2( 372, 336 )
scale = Vector2( 0.64, 0.645 )
frames = SubResource( 1 )
animation = "up"

[node name="AnimeWalk" type="AnimatedSprite" parent="."]
position = Vector2( 125, 463 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 5 )
animation = "walk"

[node name="AnimeWalk2" type="AnimatedSprite" parent="."]
position = Vector2( 386, 161 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 5 )
animation = "walk"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/danse2 = SubResource( 4 )

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 4.0
margin_top = 193.0
margin_right = 4.0
margin_bottom = 207.0
text = "Maybe Next Ludum Dare"
align = 1
